[package]
name = "retry_policies"
version = "0.1.0"
edition = "2021"
description = "Retry configuration patterns for Cadence activities and workflows"

[dependencies]
cadence-client = { path = "../../cadence-client" }
cadence-worker = { path = "../../cadence-worker" }
cadence-workflow = { path = "../../cadence-workflow" }
cadence-activity = { path = "../../cadence-activity" }
cadence-core = { path = "../../cadence-core" }
cadence-testsuite = { path = "../../cadence-testsuite" }
examples-common = { path = "../examples-common" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = "0.3"
chrono = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }
